--- a/style.css
+++ b/style.css
@@ -29,3 +29,62 @@ h2 {
   text-align: center;
   margin: 0 0 20px;
 }
+
+#mapid {
+  height: 42rem;
+  width: 30rem;
+}
+
+.leaflet-container {
+  background-color: rgba(255, 0, 0, 0);
+}
+
+.info {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+.info h4 {
+  margin: 0 0 5px;
+  color: #777;
+}
+
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.skewed {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #2c3e50;
+  z-index: 0;
+  transform: skewY(6deg);
+  transform-origin: top right;
+}
+
+.leaflet-container {
+  background: white !important;
+}
+
+.leaflet-control-zoom {
+  display: flex;
+}
+.leaflet-bottom {
+  padding-right: 15rem;
+}
