--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ body {
 
 .container {
   background-color: white;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.left-image {
+  width: 60%;
 }
 
 h2 {
@@ -71,7 +79,7 @@ h2 {
   right: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 30%;
   background: #2c3e50;
   z-index: 0;
   transform: skewY(6deg);
@@ -79,7 +87,7 @@ h2 {
 }
 
 .leaflet-container {
-  background: white !important;
+  background: rgba(255, 0, 0, 0) !important;
 }
 
 .leaflet-control-zoom {
@@ -87,4 +95,66 @@ h2 {
 }
 .leaflet-bottom {
   padding-right: 13rem;
+}
+
+.element-container {
+  display: flex;
+}
+
+.left-container {
+  margin-left:8%;
+  width: 30%;
+  height: 30rem;
+  margin-top: 5rem;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+}
+
+.right-container {
+  width: 30rem;
+  height: 30rem;
+  margin-top: 5rem;
+  /* border: 1px solid green; */
+  display: flex;
+  flex-direction: column;
+}
+
+.right-upper-container {
+  height: 50%;
+  /* border: 1px solid orange; */
+}
+
+.right-lower-container {
+  height: 50%;
+}
+
+.right-image {
+  width: 100%;
+}
+
+.skewed-bg {
+  background: #2c3e50;
+  padding: 200px 0;
+  margin-top: -200px;
+  transform: skewY(6deg);
+  width:100vw;
+}
+.skewed-bg .content {
+  transform: skewY(-6deg);
+  text-align: center;
+}
+
+.skewed-bg .content h1 {
+  color: white;
+}
+
+.skewed-bg .content .title {
+  padding-top: 100px;
+  font-weight: normal;
+}
+.skewed-bg .content .text {
+  width: 60%;
+  margin: 25px auto;
+  color: white;
 }
