Refactored UI infographic page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
   --success-color: #2ecc71;
@@ -13,7 +13,7 @@
 
 body {
   background-color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: top;
   justify-content: center;
@@ -39,8 +39,11 @@ h2 {
 }
 
 #mapid {
-  height: 42rem;
-  width: 30rem;
+  height: 49rem;
+  max-height: 49rem;
+  max-width: 45rem;
+  width: 45rem;
+  border: 1px solid red;
 }
 
 .leaflet-container {
@@ -80,7 +83,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 30%;
-  background: #2c3e50;
+  background: #d8961b;
   z-index: 0;
   transform: skewY(6deg);
   transform-origin: top right;
@@ -134,8 +137,8 @@ h2 {
 }
 
 .skewed-bg {
-  background: #2c3e50;
-  padding: 200px 0;
+  background: #fdac16;
+  padding: 80px 0;
   margin-top: -200px;
   transform: skewY(6deg);
   width:100vw;
@@ -150,8 +153,9 @@ h2 {
 }
 
 .skewed-bg .content .title {
-  padding-top: 100px;
-  font-weight: normal;
+  padding-top: 180px;
+  font-weight: bold;
+  padding-bottom: 10px;
 }
 .skewed-bg .content .text {
   width: 60%;
@@ -195,4 +199,29 @@ h2 {
 }
 #donut-container {
   height: 300px; 
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.deaths {
+  color: black;
+}
+
+.cases {
+  color: red;
+}
+
+.deathCapita {
+  color: orange;
+}
+
+.result {
+  font-weight: bold;
+}
+
+.leaflet-control-zoom {
+  display: none;
 }
