--- a/style.css
+++ b/style.css
@@ -271,6 +271,8 @@ h2 {
 .highcharts-description {
   color: white;
   font-family: 'Roboto', sans-serif;
+  width:55%;
+  margin-left: 25%;
 }
 
 .container {
