--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ h2 {
   font-family: 'Roboto', sans-serif;
   width:55%;
   margin-left: 25%;
+  font-size: 0.95rem;
 }
 
 .container {
@@ -292,4 +293,9 @@ h2 {
 .title {
   margin-left: 5%;
   font-size: 2.3rem;
+}
+
+.disclaim {
+  font-size: 0.6rem;
+  color: grey;
 }
