--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ h2 {
 
 .leaflet-top.leaflet-right {
   margin-top: 100% !important;
-  margin-right: 38% !important;
+  margin-right: 55% !important;
 }
 
 .info.leaflet-control h4 {
@@ -298,6 +298,14 @@ h2 {
 .disclaim {
   font-size: 0.6rem;
   color: grey;
+}
+
+.leaflet-control h4{
+  font-family: 'Roboto', sans-serif !important;
+}
+
+.popupBox {
+  font-family: 'Roboto', sans-serif !important;
 }
 
 @media screen and (max-width: 860px) {
@@ -340,4 +348,43 @@ h2 {
   #mapid {
     transform: scale(1) !important;
   }
+}
+
+
+.highcharts-figure, .highcharts-data-table table {
+  min-width: 320px; 
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+.highcharts-data-table table {
+	font-family: 'Roboto', sans-serif !important;
+	border-collapse: collapse;
+	border: 1px solid #EBEBEB;
+	margin: 10px auto;
+	text-align: center;
+	width: 100%;
+	max-width: 500px;
+}
+.highcharts-data-table caption {
+  padding: 1em 0;
+  font-size: 1.2em;
+  color: #555;
+}
+.highcharts-data-table th {
+	font-weight: 600;
+  padding: 0.5em;
+}
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+  padding: 0.5em;
+}
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+  background: #f8f8f800;
+}
+.highcharts-data-table tr:hover {
+  background: #f8f8f800;
+}
+
+.highcharts-background {
+  fill: transparent !important;
 }
