--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ h2 {
   width: 45rem;
   /* border: 1px solid green; */
   transform: scale(1.4);
-  margin-left: 7%;
 }
 
 .leaflet-container {
@@ -110,15 +109,15 @@ h2 {
 .element-container {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 3%;
 }
 
 .left-container {
   margin-left:2%;
   max-height:27rem;
   max-width: 40rem;
+  margin-top: -4rem;
   /* border: 1px solid red; */
-  margin-top: 12%;
-  margin-right: 5%;
 }
 
 .right-container {
@@ -272,8 +271,8 @@ h2 {
   color: white;
   font-family: 'Roboto', sans-serif;
   width:55%;
-  margin-left: 11.5%;
-  font-size: 0.95rem;
+  margin-left: 2%;
+  font-size: 0.75rem;
 }
 
 .container {
@@ -282,8 +281,8 @@ h2 {
 }
 
 .leaflet-top.leaflet-right {
-  margin-top: 100% !important;
-  margin-right: 55% !important;
+  margin-top: 10% !important;
+  margin-right: 27% !important;
 }
 
 .info.leaflet-control h4 {
@@ -300,12 +299,33 @@ h2 {
   color: grey;
 }
 
-.leaflet-control h4{
+.leaflet-control h4 {
   font-family: 'Roboto', sans-serif !important;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 500;
+  z-index: 0 !important;
 }
+
+.leaflet-control span {
+  font-family: 'Roboto', sans-serif !important;
+  color: white;
+  font-size: 1rem;
+  z-index: 0 !important;
+}
+
+.leaflet-control {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  text-align: center;
+}
+
+
 
 .popupBox {
   font-family: 'Roboto', sans-serif !important;
+  z-index: 10000 !important;
 }
 
 @media screen and (max-width: 860px) {
