--- a/style.css
+++ b/style.css
@@ -147,13 +147,11 @@ h2 {
 
 .skewed-bg {
   background: #fdac16;
-  padding: 80px 0;
+  padding: 20px 0;
   margin-top: -200px;
-  transform: skewY(6deg);
   width:100vw;
 }
 .skewed-bg .content {
-  transform: skewY(-6deg);
   text-align: center;
 }
 
@@ -162,7 +160,7 @@ h2 {
 }
 
 .skewed-bg .content .title {
-  padding-top: 180px;
+  padding-top: 200px;
   font-weight: bold;
   padding-bottom: 10px;
 }
@@ -413,4 +411,8 @@ h2 {
 
 .secondchart {
   margin-top: 3rem;
+}
+
+.down {
+  margin-top: 3.5rem;
 }
