--- a/style.css
+++ b/style.css
@@ -328,7 +328,43 @@ h2 {
   z-index: 10000 !important;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 450px) {
+
+  .body {
+    max-width: 100vw !important;
+    width: 100vw !important;
+  }
+
+  .leaflet-control h4{
+    font-size: 2rem !important;
+  }
+
+  .leaflet-control span{
+    font-size: 1.3rem !important;
+  }
+
+  .title {
+    font-size: 2.4rem;
+  }
+ 
+  #mapid {
+    margin-top: 35rem;   
+  }
+
+  .left-container {
+    margin-left: 4%;
+    margin-top: 0rem !important;
+  }
+
+  .container {
+    margin-top: 0rem;
+  }
+
+  .secondchart {
+    margin-top: 0rem;
+  }
+
+
   .element-container {
     flex-direction: column;
     
